--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Hey Banu</h1>
+        <h1 class="header_text">Salam Şapşal</h1>
         <h3 class="h2">We will play a little game now... are you ready?</h3>
       </div>
       <div class="gif_container">
